--- a/star-signs/index.html
+++ b/star-signs/index.html
@@ -19,6 +19,11 @@
         <div id="result" class="result">
             <div class="icon">
             </div>
+
+            <div id="name">
+                <div lang="en"></div>
+                <div lang="bg"></div>
+            </div>
         </div>
     </div>
 </body>
