--- a/star-signs/index.html
+++ b/star-signs/index.html
@@ -21,8 +21,8 @@
             </div>
 
             <div id="name">
-                <div lang="en"></div>
-                <div lang="bg"></div>
+                <div lang="en">primeren angliski</div>
+                <div lang="bg">primeren bulgarski</div>
             </div>
         </div>
     </div>
