adding pointer handler

--- a/Aurora/Aurora.html
+++ b/Aurora/Aurora.html
@@ -4,10 +4,12 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    html, body {
+    html,
+    body {
       padding: 0px;
       margin: 0px;
     }
+
     html {
       width: 100%;
     }
@@ -15,6 +17,7 @@
     video {
       display: none;
     }
+
     body {
       width: 100%;
       aspect-ratio: calc(16/9);
@@ -37,6 +40,7 @@
       margin-left: 54%;
       margin-top: 45%;
     }
+
     div.buttons button:nth-child(2) {
       margin-left: 46%;
     }
@@ -72,7 +76,7 @@
         })
       }
     }
-    [en, bg].forEach( el => {
+    [en, bg].forEach(el => {
       el.addEventListener("fullscreenchange", (event) => {
         hideVideos()
       })
@@ -88,16 +92,26 @@
       }
       elem.style.display = "block"
 
-    if (elem.requestFullscreen) {
-      elem.requestFullscreen();
-    } else if (elem.webkitRequestFullscreen) { /* Safari */
-      elem.webkitRequestFullscreen();
-    } else if (elem.msRequestFullscreen) { /* IE11 */
-      elem.msRequestFullscreen();
-    }
+      if (elem.requestFullscreen) {
+        elem.requestFullscreen();
+      } else if (elem.webkitRequestFullscreen) { /* Safari */
+        elem.webkitRequestFullscreen();
+      } else if (elem.msRequestFullscreen) { /* IE11 */
+        elem.msRequestFullscreen();
+      }
 
-    elem.play()
-}
+      elem.play()
+
+      document.addEventListener("keydown", (e) => {
+        if (!e.repeat) {
+          let k = e.key
+          if ( k="PageUp") {
+            
+            openFullscreen("bg")
+          }
+        }
+      });
+    }
   </script>
 
 </body>
