--- a/Aurora/Aurora.html
+++ b/Aurora/Aurora.html
@@ -102,13 +102,13 @@
       }
 
       elem.play()
-
     }
 
     document.addEventListener("keydown", (e) => {
       if (!e.repeat) {
         let k = e.key
         if (k == "PageUp") {
+          hideVideos()
           openFullscreen("bg")
         } else if (k == "PageDown") {
           openFullscreen("en")
