--- a/star-signs/index.html
+++ b/star-signs/index.html
@@ -15,6 +15,11 @@
     <div id="error"></div>
     <div id="ports"></div>
 
+    <video width="100%" loop id="screensaver">
+        <source src="assets/screensaver_1.mov" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+
     <div id="question" class="question">
         <div id="result" class="result">
             <div class="icon">
